# Retrigger

./: .gitignore  COMPLETE_ACHIEVEMENT_REPORT.md  Cargo.toml  FINAL_PRODUCTION_VALIDATION.js  Makefile  README.md  comprehensive_validation_results.json  test-plugin-functionality.js  test-webpack-readiness-fixed.js
.github/workflows/: ci.yml  release.yml  test-workflow.yml
deploy/docker/: .gitignore  Dockerfile  Dockerfile.alpine  retrigger.toml
docs/: ARCHITECTURE.md  idea.md
src/bindings/nodejs/: .gitignore  .prettierignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  src
src/bindings/nodejs/plugins/: vite-plugin.js  webpack-plugin.js
src/bindings/nodejs/src-js/: bundler-adapters.js  hmr-integration.js  ipc-bridge.js  performance-monitor.js  shared-buffer.js
src/bindings/nodejs/types/: index.d.ts
src/core/: .gitignore  Makefile
src/core/include/: retrigger_hash.h
src/core/src/: bench_hash.c  retrigger_hash.c  simd_avx2.c  simd_avx512.c  simd_neon.c  test_hash.c
src/daemon/: README.md  index.js  package.json
src/daemon/config/: retrigger.toml
src/daemon/retrigger-bindings/: Cargo.toml
src/daemon/retrigger-bindings/src/: lib.rs
src/daemon/retrigger-core/: Cargo.toml  build.rs
src/daemon/retrigger-core/src/: lib.rs
src/daemon/retrigger-daemon/: Cargo.toml
src/daemon/retrigger-daemon/src/: daemon.rs  grpc.rs  lib.rs  main.rs  metrics.rs
src/daemon/retrigger-daemon/src/api/: mod.rs
src/daemon/retrigger-daemon/src/config/: mod.rs
src/daemon/retrigger-daemon/src/ipc/: mod.rs
src/daemon/retrigger-system/: Cargo.toml  build.rs
src/daemon/retrigger-system/src/: lib.rs
src/daemon/scripts/: post-install.js  test-daemon.js
src/system/zig/: .gitignore  build.zig
src/system/zig/src/: benchmark.zig  error_handling.zig  main.zig  performance.zig  validation.zig
src/system/zig/src/platform/: cross_platform_ebpf.zig  ebpf.zig  linux.zig  macos.zig  windows.zig
test-environments/vite-test/: index.html  package-lock.json  package.json  vite.config.js
test-environments/vite-test/src/: hot-reload-test.js  main.js  stress-test.js  style.css  utils.js
test-environments/webpack-test/: package-lock.json  package.json  webpack.config.js  webpack.simple.js
test-environments/webpack-test/src/: hot-reload-test.js  index.html  index.js  styles.css  utils.js  webpack-stress-test.js
tests/: test-plugin-functionality.js  test-real-world-integration.js  test-webpack-readiness.js
tools/benchmarks/: .gitignore  comparison.js  daemon_file_watching_test.js  minimal_test.js  package-lock.json  package.json  simple_test.js  verification_results.json  webpack_vite_benchmark.js  working_components_benchmark.js
tools/benchmarks/temp_test_10_1758429142722/: test_000004.txt  test_000009.txt
tools/examples/: zero_copy_example.rs  zero_copy_ipc_demo.js
tools/scripts/: dev-setup.sh  validate-performance.sh  verify-ipc-integration.sh
