[workspace]

[package]
name = "retrigger-nodejs-bindings"  
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for Retrigger using napi-rs"

[lib]
crate-type = ["cdylib"]
path = "../../daemon/retrigger-bindings/src/lib.rs"

[dependencies]
retrigger-core = { path = "../../daemon/retrigger-core" }
retrigger-system = { path = "../../daemon/retrigger-system" }
napi = { version = "2.16", features = ["napi8", "tokio_rt"] }
napi-derive = "2.16"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"

[build-dependencies]
napi-build = "2.1"
