[package]
name = "retrigger-bindings"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for Retrigger using napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
retrigger-core = { path = "../retrigger-core" }
retrigger-system = { path = "../retrigger-system" }
napi = { version = "2.16", features = ["napi8", "tokio_rt"] }
napi-derive = "2.16"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
napi-build = "2.1"
