[package]
name = "retrigger-core"
version = "0.1.0"
edition = "2021"
description = "Core abstractions and interfaces for Retrigger"

[dependencies]
serde = { workspace = true }
thiserror = "1.0"
bytes = "1.5"
blake3 = "1.5"
wide = "0.7"
cfg-if = "1.0"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
